--- a/examples/secure-multi-party-computation/Duet/1-DS-2-DO/POC-MPCTensor-Duet-Bob.ipynb
+++ b/examples/secure-multi-party-computation/Duet/1-DS-2-DO/POC-MPCTensor-Duet-Bob.ipynb
@@ -230,9 +230,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -244,7 +244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
