--- a/examples/secure-multi-party-computation/Duet/1-DS-1-DO/POC-MPCTensor-Duet-Party2-DO.ipynb
+++ b/examples/secure-multi-party-computation/Duet/1-DS-1-DO/POC-MPCTensor-Duet-Party2-DO.ipynb
@@ -452,9 +452,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
